# 2.08.27 (60857) Jan 31, 2012
Fixed buggy behavior for connecting tracks
For purposes of limiting created tracks, count the number of created tracks, not the total number of joined tracks (which changes as more tracks are joined)
Updated credits
> Added new sim "Energy Skate Park: Basics"
# 2.08.26 (60834) Jan 31, 2012
Removed easter eggs that allow the user to add and remove skaters with "a" and "r" keys
Changed Energy Skate Park main (non-basics) application "friction" text back to "track friction" since it does not apply to the ground
Renamed "Track friction" to "Friction"
Handled code review requests, see #3232
# 2.08.25 (60735) Jan 30, 2012
Energy Skate Park Basics: Make the "Return Skater" button return the skater to the original location, if the skater hasn't been moved yet
Energy Skate Park Basics: Hide the bar chart when the user switches tabs
Energy Skate Park Basics: Internationalized speedometer
# 2.08.24 (60714) Jan 27, 2012
Fixed: Pie chart disappears with friction on in left well of double-well on tab 2
Fixed: Speed readout doesn't reset on "reset all"
# 2.08.23 (60707) Jan 27, 2012
Fixed: Track button screen shots have track overlapping the control panel
# 2.08.22 (60675) Jan 26, 2012
# 2.08.21 (60673) Jan 26, 2012
# 2.08.20 (60573) Jan 24, 2012
Fixed: Parabola shifts to the left when switching tracks and switching back
# 2.08.19 (60504) Jan 23, 2012
Moved the grid behind the control panel
# 2.08.18 (60491) Jan 20, 2012
Made the grid gray instead of black
# 2.08.17 (60486) Jan 20, 2012
# 2.08.16 (60085) Jan 10, 2012
# 2.08.15 (60083) Jan 10, 2012
Energy Skate Park Basics: Simsharing: #3201: Added trackIndex to distinguish from trackName
Energy Skate Park Basics: Simsharing: #3201: Added track ID's
Energy Skate Park Basics: Simsharing: #3201: Fixed location and simsharing of play area "return skater" button
Energy Skate Park Basics: Simsharing: #3201: Removed extraneous output on startup and when switching tracks