@@ -1,3 +1,4 @@
+Energy Skate Park: Removed limitation on number of tracks
 # 2.08.27 (60857) Jan 31, 2012
 Fixed buggy behavior for connecting tracks
 For purposes of limiting created tracks, count the number of created tracks, not the total number of joined tracks (which changes as more tracks are joined)
